Change: fix navbar not being sticky, removed overflow:hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ textarea {
     width: 100%;
     height: auto;
     font-family: 'Koulen', sans-serif;
-    overflow: hidden;
+
 }
 
 #navbar li {
